- made the login page allowing the user to enter email and password then sent to api to verifie - started register page missing the register api implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">projet-session</string>
+    <string name="background">background image</string>
 </resources>
